dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Revision: 1.1 $)dnl

AC_INIT(redblack.c)

REDBLACK_MAJOR_VERSION=1
REDBLACK_MINOR_VERSION=1
REDBLACK_MICRO_VERSION=0
REDBLACK_VERSION=$REDBLACK_MAJOR_VERSION.$REDBLACK_MINOR_VERSION.$REDBLACK_MICRO_VERSION

# For automake.
VERSION=$REDBLACK_VERSION
PACKAGE=libredblack

dnl Initialize the automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_SUBST(REDBLACK_MAJOR_VERSION)
AC_SUBST(REDBLACK_MINOR_VERSION)
AC_SUBST(REDBLACK_MICRO_VERSION)
AC_SUBST(REDBLACK_VERSION)

AM_CONFIG_HEADER(config.h)

dnl Initialize libtool
AM_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(Makefile libredblack.spec)
