dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Revision: 1.3 $)dnl

AC_INIT(redblack.c)

REDBLACK_MAJOR_VERSION=1
REDBLACK_MINOR_VERSION=2
REDBLACK_VERSION=$REDBLACK_MAJOR_VERSION.$REDBLACK_MINOR_VERSION

dnl Library version info
dnl This should be one more than REDBLACK_MAJOR_VERSION
dnl incremented each time there is a change to the interface
REDBLACK_LIB_CURRENT=2

dnl This should be incremented with every source code change
REDBLACK_LIB_REVISION=$REDBLACK_MINOR_VERSION

dnl This should be set to zero everytime we DELETE from the interface
dnl It should be incremented every time we ADD to the interface
REDBLACK_LIB_AGE=1

# For automake.
VERSION=$REDBLACK_VERSION
PACKAGE=libredblack

dnl Initialize the automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_SUBST(REDBLACK_LIB_CURRENT)
AC_SUBST(REDBLACK_LIB_REVISION)
AC_SUBST(REDBLACK_LIB_AGE)

AC_SUBST(REDBLACK_VERSION)

AM_CONFIG_HEADER(config.h)

dnl Initialize libtool
AM_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup)

AC_OUTPUT(Makefile libredblack.spec)
