
EXTRA_DIST = dlt2name.pl missing-autogen missing-python3 missing-asciidoctor check-generated-opts.sh \
	autoopts/README.md autoopts/defparser.py autoopts/emit_h.py autoopts/emit_c.py \
	autoopts/emit_adoc.py autoopts/generate.py autoopts/validate_ir.py \
	autoopts/check_emitters.py autoopts/check_adoc.py

MAINTAINERCLEANFILES = Makefile.in
